removed horizontal scrolling

--- a/frontend/src/components/Results/Info/Graph/Graph.scss
+++ b/frontend/src/components/Results/Info/Graph/Graph.scss
@@ -1,13 +1,12 @@
 .Graph__container {
   padding-top: 4%;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 }
 
 .Graph__tree-container {
   width: 100%;
   height: 100%;
-  margin: auto;
 }
 
 .Graph__header {
