--- a/frontend/src/components/Results/Results.scss
+++ b/frontend/src/components/Results/Results.scss
@@ -3,6 +3,7 @@
 .Results {
   font-family: "Circular";
   word-spacing: -4px;
+  // background-color: rgba(255, 148, 115, 0.082);
 }
 
 .Results__logo-container {
@@ -16,7 +17,7 @@
 }
 
 .Results__header {
-  margin-top: 3.5%;
+  padding-top: 3.5%;
   padding-bottom: 4%;
   width: 100%;
 }
