--- a/frontend/src/components/Results/Info/Graph/Graph.scss
+++ b/frontend/src/components/Results/Info/Graph/Graph.scss
@@ -7,13 +7,11 @@
 .Graph__tree-container {
   width: 100%;
   height: 100%;
+  margin: 0 auto;
 }
 
 .Graph__header {
-  font-size: 24px;
   font-weight: 900;
-  margin: 0;
-  padding-left: 5%;
 }
 
 .nodeNameBase {
