--- a/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
+++ b/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
@@ -10,8 +10,8 @@
 
 .Cblocks__fileName {
   margin: 0;
-  color: $dark-color;
-  font-size: 15px;
+  color: $primary-color;
+  font-size: 18px;
   font-weight: 550;
   padding-bottom: 0.5%;
 }
@@ -24,4 +24,8 @@
 span {
   border-radius: 10px !important;
   padding: 2%;
+}
+
+.Cblocks__block {
+  margin-bottom: 2%;
 }
