--- a/frontend/src/components/Results/Info/Info.scss
+++ b/frontend/src/components/Results/Info/Info.scss
@@ -1,3 +1,12 @@
 .Info__top {
   margin-top: 6%;
 }
+
+.Info__chart-container {
+  background-color: white;
+  padding-top: 3%;
+  padding-bottom: 1%;
+  box-shadow: 0px 4px 50px rgba(163, 163, 163, 0.16);
+  border-radius: 32px;
+  margin-right: 4%;
+}
