--- a/frontend/src/components/Results/Info/Graph/Graph.scss
+++ b/frontend/src/components/Results/Info/Graph/Graph.scss
@@ -1,7 +1,7 @@
 .Graph__container {
   padding-top: 4%;
   width: 100%;
-  height: 50vh;
+  height: 40vh;
 }
 
 .Graph__tree-container {
@@ -14,6 +14,7 @@
   font-weight: 900;
 }
 
-.nodeNameBase {
+.nodeNameBase, .nodeAttributesBase {
   stroke-width: 0.1;
+  fill: black;
 }
