--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,3 +28,11 @@ code {
   src: url("./assets/fonts/lineto-circular-black.ttf");
   font-weight: 900;
 }
+
+img {
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+}
