Show code blocks from fetched data

--- a/frontend/src/components/Landing/Search/Search.scss
+++ b/frontend/src/components/Landing/Search/Search.scss
@@ -31,11 +31,11 @@
 }
 
 .Search__loading {
-  height: 196px;
+  height: 224px;
 }
 
 .Search__spinner {
   display: block;
   margin: 0 auto;
-  margin-top: 6%;
+  padding-top: 4%;
 }
