--- a/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
+++ b/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
@@ -27,7 +27,7 @@ span {
 }
 
 .Cblocks__block {
-  margin-bottom: 2%;
+  margin-bottom: 1%;
 }
 
 .Cblocks__links {
@@ -57,4 +57,8 @@ span {
   margin-right: 1em;
   width: 4px;
   font-size: 16px;
+}
+
+.Cblocks__block-container {
+  margin-bottom: 2%;
 }
