--- a/frontend/src/components/Results/Info/Gauge/Gauge.scss
+++ b/frontend/src/components/Results/Info/Gauge/Gauge.scss
@@ -4,7 +4,7 @@
 }
 
 .Gauge__inner-container {
-  width: 100%;
+  width: 50%;
   margin: auto;
   margin-top: 4%;
 }
@@ -14,6 +14,7 @@
   font-weight: 900;
   font-family: "Circular";
   word-spacing: -12px;
+  font-size: 24px;
 }
 
 .Gauge__image {
