--- a/frontend/src/components/Results/Info/Info.scss
+++ b/frontend/src/components/Results/Info/Info.scss
@@ -1,12 +1,20 @@
+@import '../../../shared/variables.scss';
+
 .Info__top {
-  margin-top: 6%;
+  margin-top: 2%;
 }
 
 .Info__chart-container {
   background-color: white;
   padding-top: 3%;
-  padding-bottom: 1%;
   box-shadow: 0px 4px 50px rgba(163, 163, 163, 0.16);
   border-radius: 32px;
   margin-right: 4%;
+}
+
+.Info__projectName {
+  text-align: center;
+  text-transform: uppercase;
+  color: $dark-color;
+  font-weight: 900;
 }
