--- a/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
+++ b/frontend/src/components/Results/Info/Cblocks/Cblocks.scss
@@ -39,7 +39,7 @@ span {
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-.Cblocks__link {
+.Cblocks__link, .Cblocks__href {
   font-weight: 700;
   color: $dark-color;
 }
